--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.7.0",
+    "react-native-simple-toast": "^1.1.2",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
