--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native": "0.62.2",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-ionicons": "^5.0.0-rc",
+    "react-native-onboarding-swiper": "^1.1.1",
     "react-native-reanimated": "^1.8.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.7.0",
     "react-native-simple-toast": "^1.1.2",
