--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.10.0",
+    "@react-native-community/clipboard": "^1.2.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-dialog": "^5.6.0",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-ionicons": "^5.0.0-rc",
