--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-ionicons": "^5.0.0-rc",
+    "react-native-lock-screen": "^1.0.1",
     "react-native-onboarding-swiper": "^1.1.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-responsive-screen": "^1.4.1",
