--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eosapp",
+  "name": "dWallet",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -25,6 +25,7 @@
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.7.0",
     "react-native-simple-toast": "^1.1.2",
+    "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
