--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,6 +188,8 @@ android {
 }
 
 dependencies {
+    implementation "com.facebook.fresco:animated-gif:1.3.0"
+    implementation "com.facebook.fresco:animated-base-support:1.3.0"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
