Splash Screen module Integarte

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,10 @@ target 'eosapp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'eosappTests' do
     inherit! :complete
     # Pods for testing
