--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "react-native-ionicons": "^5.0.0-rc",
     "react-native-lock-screen": "^1.0.1",
     "react-native-onboarding-swiper": "^1.1.1",
+    "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "^1.8.0",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.7.0",
     "react-native-simple-toast": "^1.1.2",
     "react-native-smooth-pincode-input": "^1.0.9",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
