--- a/ios/dWallet.xcodeproj/xcshareddata/xcschemes/eosapp.xcscheme
+++ b/ios/dWallet.xcodeproj/xcshareddata/xcschemes/eosapp.xcscheme
@@ -16,8 +16,8 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "dWallet.app"
-               BlueprintName = "eosapp"
-               ReferencedContainer = "container:eosapp.xcodeproj">
+               BlueprintName = "dWallet"
+               ReferencedContainer = "container:dWallet.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "eosappTests.xctest"
-               BlueprintName = "eosappTests"
-               ReferencedContainer = "container:eosapp.xcodeproj">
+               BuildableName = "dWalletTests.xctest"
+               BlueprintName = "dWalletTests"
+               ReferencedContainer = "container:dWallet.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -56,8 +56,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "dWallet.app"
-            BlueprintName = "eosapp"
-            ReferencedContainer = "container:eosapp.xcodeproj">
+            BlueprintName = "dWallet"
+            ReferencedContainer = "container:dWallet.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -73,8 +73,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "dWallet.app"
-            BlueprintName = "eosapp"
-            ReferencedContainer = "container:eosapp.xcodeproj">
+            BlueprintName = "dWallet"
+            ReferencedContainer = "container:dWallet.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
