--- a/package.json
+++ b/package.json
@@ -12,31 +12,32 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/clipboard": "^1.2.2",
+    "buffer": "^5.0.6",
     "css-select": "^2.1.0",
     "css-tree": "^1.0.0-alpha.39",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-camera-kit": "^8.0.4",
     "react-native-dialog": "^5.6.0",
     "react-native-elements": "^2.0.0",
+    "react-native-gesture-handler": "~1.5.0",
     "react-native-ionicons": "^5.0.0-rc",
     "react-native-lock-screen": "^1.0.1",
     "react-native-modal": "^11.5.6",
     "react-native-onboarding-swiper": "^1.1.1",
+    "react-native-qrcode-svg": "^6.0.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.7.0",
     "react-native-simple-toast": "^1.1.2",
     "react-native-smooth-pincode-input": "^1.0.9",
-    "react-native-vector-icons": "^6.6.0",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "buffer": "^5.0.6",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-qrcode-svg": "^6.0.1",
     "react-native-svg": "^9.13.6",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^8.0.0"
+    "react-native-webview": "^8.0.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
