--- a/ios/dWallet/Info.plist
+++ b/ios/dWallet/Info.plist
@@ -40,7 +40,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>camera usage</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
