--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-camera-kit": "^8.0.4",
+    "react-native-confirmation-code-field": "^6.4.0",
     "react-native-dialog": "^5.6.0",
-    "react-native-elements": "^2.0.0",
+    "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-ionicons": "^5.0.0-rc",
     "react-native-lock-screen": "^1.0.1",
