--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-lock-screen": "^1.0.1",
     "react-native-modal": "^11.5.6",
     "react-native-onboarding-swiper": "^1.1.1",
+    "react-native-pin-view": "^3.0.0",
     "react-native-qrcode-svg": "^6.0.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-responsive-screen": "^1.4.1",
