--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@arisencore/ecc": "^1.0.1",
     "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/clipboard": "^1.2.2",
     "buffer": "^5.0.6",
     "css-select": "^2.1.0",
     "css-tree": "^1.0.0-alpha.39",
+    "ethers": "^4.0.27",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-camera-kit": "^8.0.4",
