--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-ionicons": "^5.0.0-rc",
+    "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-lock-screen": "^1.0.1",
     "react-native-modal": "^11.5.6",
     "react-native-onboarding-swiper": "^1.1.1",
