--- a/ios/Podfile
+++ b/ios/Podfile
@@ -81,6 +81,8 @@ target 'dWallet' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
   target 'dWalletTests' do
     inherit! :complete
     # Pods for testing
