--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -162,7 +162,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            multiDexKeepFile file('multidex-config.txt')
+            //multiDexKeepFile file('multidex-config.txt')
         }
     }
 
