added some changes from skype

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/clipboard": "^1.2.2",
     "@react-native-community/netinfo": "^5.9.4",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "buffer": "^5.0.6",
     "css-select": "^2.1.0",
     "css-tree": "^1.0.0-alpha.39",
@@ -39,7 +40,7 @@
     "react-native-simple-toast": "^1.1.2",
     "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-svg": "^9.13.6",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "6.6.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^8.0.0",
     "react-redux": "^7.2.0",
